@@ -1,6 +1,6 @@
 #!/usr/bin/env python
 '''
-cp.s3ql - this file is part of S3QL (http://s3ql.googlecode.com)
+s3qlcp - this file is part of S3QL (http://s3ql.googlecode.com)
 
 Copyright (C) 2008-2009 Nikolaus Rath <Nikolaus@rath.org>
 
