@@ -1,6 +1,6 @@
 #!/usr/bin/env python
 '''
-tune.s3ql - this file is part of S3QL (http://s3ql.googlecode.com)
+s3qlstat - this file is part of S3QL (http://s3ql.googlecode.com)
 
 Copyright (C) 2008-2009 Nikolaus Rath <Nikolaus@rath.org>
 
@@ -19,5 +19,5 @@ if (os.path.exists(os.path.join(basedir, 'setup.py')) and
     os.path.exists(os.path.join(basedir, 'src', 's3ql', '__init__.py'))):
     sys.path = [os.path.join(basedir, 'src')] + sys.path
     
-import s3ql.cli.tune
-s3ql.cli.tune.main(sys.argv[1:])
+import s3ql.cli.statfs
+s3ql.cli.statfs.main(sys.argv[1:])
