@@ -2,6 +2,8 @@ xxx, S3QL 0.18
 
   * Added --strip-meta option to mount.s3ql
   
+  * stat.s3ql, tune.s3ql and cp.s3ql have been renamed to
+    s3qlstat, s3qltune and s3qlcp respectively.
   
 2010-06-29, S3QL 0.17
 
